--- a/src/components/Products/Style.css
+++ b/src/components/Products/Style.css
@@ -1,9 +1,12 @@
 .card-list{
     background: transparent;
     border-radius: 25px;
-    margin-top: 100px;
+    margin-top: 150px;
     width: 100vw;
     border: none;
+    box-shadow: 0px 0px 2px black;
+    border-radius: 15px;
+    background: rgba(255, 254, 254, 0.626);
     
     
 }
@@ -12,14 +15,16 @@
     z-index: 1;
     border: none;
     border-color: aliceblue;
-    padding-top: 50px;    
+    padding-top: 30px;  
 }
 
 .furcategories{
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-gap: 10px;
+    grid-gap: 15px;
     margin-top: 50px;    
+    border: none;
+
     
  
 }
@@ -28,9 +33,11 @@
  flex-direction: row;
  overflow: hidden;
  height: 250px;
- border-radius: 20px;
+ border-radius: 10px;
  transition: transform 0.5s ;
  margin: 10px;
+ box-shadow: 0px 0px 2px black;
+
 
 }
 
