--- a/src/components/Home/Style.css
+++ b/src/components/Home/Style.css
@@ -241,6 +241,8 @@ body {
 footer {
   border-radius: 15px 15px 0 0;
   box-shadow: 0px 0px 5px black;
+  position: sticky;
+  bottom: -5;
 
 }
 
@@ -260,9 +262,9 @@ footer {
 .search {
   display: grid;
   grid-template-columns: auto auto auto;
-  /* grid-gap: 15px; */
-  /* margin-top: 50px;     */
-  /* border: none; */
+  grid-gap: 15px;
+  margin-top: 50px;    
+  border: none;
 }
 
 .text-center {
