--- a/src/components/Products/Style.css
+++ b/src/components/Products/Style.css
@@ -73,3 +73,47 @@
 .btn-list:hover{
     transform: scale(105%);
 }
+
+
+
+/* ProductDetails */
+
+
+
+.cart-image{
+    width: 500px;
+    height: 400px;
+    border-radius: 50px 0 0 50px;
+    object-fit: cover;
+    border: none;
+}
+.cart-image img{
+    width: 500px;
+    height: 400px;
+    border-radius: 50px 0 0 50px;
+    
+}
+
+.cart-product{
+    width: 500px;
+    height: 400px;
+    border-radius: 0px 50px 50px 0px;
+    background: rgba(84, 98, 102, 0.265);
+    border: none;
+}
+
+.description{
+    max-width: 300px;
+    font-size: large;
+    /* padding-top: 100px; */
+    gap: 20px;
+    margin-top: 50px;
+    margin-left: 120px;
+    
+}
+
+.addtocart{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 50px;
+}
