--- a/src/components/Home/Style.css
+++ b/src/components/Home/Style.css
@@ -102,17 +102,28 @@ body {
   margin-top: 150px;
   position: fixed;
   right: 500px;
+  border-color: #87acba1f;
+  border: none;
 }
 
 .search-bar input {
   height: 34px;
-  width: 150px;
-  border: 1px solid rgb(84,98,102);
-  border-radius: 15px 0 0 15px;
+  width: 200px;
+  border-color:  rgb(84,98,102);
+  border-radius: 15px;
+  background-color: #87acba1f;
+  /* border-right: none; */
+
+}
+
+.searchBtn{
+  position: fixed;
+  margin-left: 170px;
 }
 
 .btn1 {
-  border: 1px solid;
+  /* border: 1px solid; */
+  border-left: none;
   width: 60px;
   height: 34px;
   display: flex;
@@ -181,6 +192,7 @@ body {
   background-color: #1ba8c41b;
   border: 1px solid rgb(84,98,102);
   transform: scale(1.1);
+  box-shadow: 5px 3px 5px rgb(163, 159, 159);
 }
 
 .car-log {
@@ -204,21 +216,16 @@ body {
 .home-img {
   width: 100%;
   height: 100vh;
-  border-radius: 0 0 15px 15px;
   margin: 0;
   padding: 0;
   box-shadow: 0px 0px 5px black;
 
 }
 
-/* 
-.container {
-  margin-top: 100px;
-} */
+
 
 .card-container {
   border: none;
-  border-radius: 15px;
   background: rgba(255, 254, 254, 0.626);
   box-shadow: 0px 0px 5px black;
 
@@ -232,6 +239,7 @@ body {
 }
 .category-image:hover {
   transform: scale(105%);
+  box-shadow: 10px 5px 5px rgb(163, 159, 159);
 }
 
 /* End Home */
@@ -239,7 +247,7 @@ body {
 /* Footer */
 
 footer {
-  border-radius: 15px 15px 0 0;
+  /* border-radius: 15px 15px 0 0; */
   box-shadow: 0px 0px 5px black;
   position: sticky;
   bottom: -5;
