--- a/src/components/Registration-Login/style.css
+++ b/src/components/Registration-Login/style.css
@@ -1,85 +1,76 @@
 /* Registration */
 
-.registration{
-    width: 100vw;
-    height: 100vh;
-    background: #dddada;
+.registration {
+  width: 100vw;
+  height: 100vh;
+  background: #dddada;
 }
-.form-group{
-    width: 300px;
-    margin: 10px 0 0 150px;
-    
+.form-group {
+  width: 300px;
+  margin: 10px 0 0 150px;
 }
 
-.registration .cardSize{
-    width: 700px;
-    margin: 150px 0 0 -50px;
-    padding: 50px;
-    overflow: hidden;
-    border: none;
-    box-shadow: 15px -10px 10px rgb(163, 159, 159);
-    border-radius: 15px;
-    background-image: url('https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcC00NjQtdGQtMDE3MC0wNF8xLmpwZw.jpg');
+.registration .cardSize {
+  width: 700px;
+  margin: 150px 0 0 -50px;
+  padding: 50px;
+  overflow: hidden;
+  border: none;
+  box-shadow: 15px -10px 10px rgb(163, 159, 159);
+  border-radius: 15px;
+  background-image: url("https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcC00NjQtdGQtMDE3MC0wNF8xLmpwZw.jpg");
 }
 .cardSize::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    backdrop-filter: blur(5px); 
-    z-index: 1; 
-  }
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  backdrop-filter: blur(5px);
+  z-index: 1;
+}
 .cardSize .card-body {
-    position: relative;
-    z-index: 2;
-  }
-
+  position: relative;
+  z-index: 2;
+}
 
 .registration .text-outline {
-    text-shadow: 
-        15px 10px 5px #6c6969, 
-        2px 3px 5px #908d8d,  
-        -1px 0px 0px #9c8f8f,
-        1px 10px 20px #d5cfcf; 
-    color: rgb(246, 238, 238);
+  text-shadow: 15px 10px 5px #6c6969, 2px 3px 5px #908d8d, -1px 0px 0px #9c8f8f,
+    1px 10px 20px #d5cfcf;
+  color: rgb(246, 238, 238);
 }
 
 /* End Registration */
 
 /* Login */
 
-.login{
-    width: 100vw;
-    height: 100vh;
-    background: #fbf9f5f7;
+.login {
+  width: 100vw;
+  height: 100vh;
+  background: #fbf9f5f7;
 }
-.login .cardSize{
-    margin-top: 180px;
-    padding: 100px;
-    overflow: hidden;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 15px -10px 10px rgb(163, 159, 159);
-    background-image: url('https://t4.ftcdn.net/jpg/05/65/75/59/360_F_565755935_GLp4UQXwqgB4wYBGorgOVWm6NqU1taTE.jpg');
-
+.login .cardSize {
+  margin-top: 180px;
+  padding: 100px;
+  overflow: hidden;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 15px -10px 10px rgb(163, 159, 159);
+  background-image: url("https://t4.ftcdn.net/jpg/05/65/75/59/360_F_565755935_GLp4UQXwqgB4wYBGorgOVWm6NqU1taTE.jpg");
 }
 
-.login  .text-outline {
-    text-shadow: 
-        7px 10px 5px #f2ececa6, 
-        1px 0px 0px #ece4e4ad,  
-        -1px 0px 0px #e7e1e1,
-        1px 10px 20px #d5cfcf; 
-    color: rgb(15, 12, 12);
+.login .text-outline {
+  text-shadow: 7px 10px 5px #f2ececa6, 1px 0px 0px #ece4e4ad,
+    -1px 0px 0px #e7e1e1, 1px 10px 20px #d5cfcf;
+  color: rgb(15, 12, 12);
 }
 .login .btn-navy {
-    background-color: #d7dde3ab;
-    border-color: #061525;
-    color: #045882;
-    border-radius: 10px;
-    font-weight: bold;
-  }
+  background-color: #d7dde3ab;
+  border-color: #061525;
+  color: #045882;
+  border-radius: 10px;
+  font-weight: bold;
+}
 
-  /*End  Login */
+/*End  Login */
