--- a/src/components/Cart/Style.css
+++ b/src/components/Cart/Style.css
@@ -3,7 +3,6 @@
     max-width: 700px;
     margin: 200px ;
     padding: 20px;
-    border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
@@ -51,4 +50,9 @@
     align-items: center;
     border: none;
     background: transparent;
+  }
+  button{
+    background: #eceeef;
+    height: fit-content;
+    width: max-content;
   }
