--- a/src/components/Products/Style.css
+++ b/src/components/Products/Style.css
@@ -1,27 +1,22 @@
 .card-list{
     background: transparent;
-    border-radius: 25px;
     margin-top: 150px;
     width: 100vw;
     border: none;
-    box-shadow: 0px 0px 2px black;
-    border-radius: 15px;
+    box-shadow: 0px 0px 0px black;
     background: rgba(255, 254, 254, 0.626);
     
     
 }
 
 .categories-head{
-    z-index: 1;
     border: none;
-    border-color: aliceblue;
     padding-top: 30px;  
 }
 
 .furcategories{
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 15px;
+    grid-template-columns: 1fr 1fr 1fr;
     margin-top: 50px;    
     border: none;
 
@@ -42,7 +37,8 @@
 }
 
 .card-item:hover{
-    transform: scale(103%);
+    transform: scale(102%);
+
 }
 
 .card-item img{
@@ -81,9 +77,14 @@
 
 .btn-list{
     transition: transform 0.5s ;
+    background: rgb(42, 99, 111);
+    color: aliceblue;
 }
 .btn-list:hover{
     transform: scale(105%);
+    background: rgb(42, 99, 111);
+    color: aliceblue;
+    
 }
 
 
@@ -92,6 +93,13 @@
 
 .product{
     margin-left: 85px;
+    margin-top: 150px;
+    height: 500px;
+    width: 100%;
+    height: 500px;
+    padding: 20px;
+    background: transparent; 
+    border: none;
 }
 
 .cart-image{
@@ -117,12 +125,9 @@
 }
 
 .description{
-    max-width: 300px;
+    max-width: 500px;
     font-size: large;
-    /* padding-top: 100px; */
-    gap: 20px;
-    margin-top: 50px;
-    margin-left: 120px;
+    margin-left: 50px;
     
 }
 
