--- a/src/components/NavBar-Footer/Style.css
+++ b/src/components/NavBar-Footer/Style.css
@@ -103,6 +103,7 @@
   .search-bar {
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-top: 150px;
     position: fixed;
     right: 500px;
