--- a/src/Admin Page/component/Edit&AddProduct/form.css
+++ b/src/Admin Page/component/Edit&AddProduct/form.css
@@ -1,7 +1,7 @@
 
 .control{
     width: 85%;
-    margin: 100px 150px;
+    margin: 100px 100px;
     display: flex;
     justify-content: center;
 }
@@ -14,3 +14,16 @@
     width: 200px;
 }
 
+.add-edit-product-form{
+    display: flex;
+    justify-content: center;
+    margin-right: 50px;
+}
+.selectCategory{
+    display: flex;
+    justify-content: center;
+}
+.add-btn{
+    display: flex;
+    justify-content: center;
+}
