--- a/src/Admin Page/component/Home/admin.css
+++ b/src/Admin Page/component/Home/admin.css
@@ -1,3 +1,7 @@
+.body-admin{
+  background-color: #f6f6f6;
+}
+
 .card-Header{
   width: 100%;
   height: 150px;
@@ -55,7 +59,7 @@
   display: flex;
   border: none;
   justify-content: flex-start;
-  background-color: rgba(100, 109, 103, 0.368);
+  background-color: rgba(192, 193, 192, 0.368);
 
 }
 .category-type{
@@ -64,7 +68,7 @@
   justify-content: space-evenly;
 }
 .category-name{
-  background-color: rgb(184, 217, 208);
+  background-color: rgb(225, 232, 231);
   border: none;
   width: 150px;
   display: flex;
@@ -78,9 +82,11 @@
   align-items: center;
 }
 .product-name:hover{
-  background-color: rgb(184, 217, 208);
+  background-color: rgb(210, 215, 214);
 }
-
+.product-name:active{
+  background: rgb(155, 178, 165);
+}
 
 .text-none{
   text-decoration: none;
@@ -115,47 +121,7 @@
   justify-content: space-evenly;
 }
 
-/* 
 
-.card-name {
-  border: none;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  margin-bottom: 20px;
-}
-
-.card-primary {
-  background: linear-gradient(135deg, #4a90e2, #50a3f4); 
-  color: white;
-}
-
-.card-success {
-  background: linear-gradient(135deg, #34c759, #5cd85b); 
-  color: white;
-}
-
-.card-warning {
-  background: linear-gradient(135deg, #ff9500, #ffb547); 
-  color: white;
-}
-
-.card-header {
-  font-size: 1.2rem;
-  font-weight: 600;
-  text-align: center;
-}
-
-.card-body-name {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100px;
-}
-
-.card-title-admin {
-  font-size: 2.5rem;
-  margin: 0;
-} */
 
 
 .react-calendar__navigation{
@@ -245,7 +211,7 @@ abbr[title]{
 
 .table-prd .category-border{
   width: 400px;
-  /* margin-left: 50px; */
+  margin-left: 100%;
 }
 .table-prd .table{
   height: 332px;
@@ -256,3 +222,8 @@ abbr[title]{
   padding-top: 35px;
 }
 
+
+.search-container-products{
+  width: 200px;
+  margin-left: 844px;
+}
