--- a/src/User Pages/component/NavBar-Footer/Style.css
+++ b/src/User Pages/component/NavBar-Footer/Style.css
@@ -52,7 +52,11 @@
     align-items: center;
     margin-right: 10px;
   }
-  
+  @media (max-width : 1200){
+    .navbar-menu{
+      
+    }
+  }
   .navbar-link {
     width: 50px;
     height: 34px;
@@ -237,4 +241,95 @@
   }
   
   /* End Footer  */
+
+
+
+
+  /* Base styles */
+/* body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  overflow-x: hidden; 
+} */
+
+/* Container for the menu and content */
+
+.menu-toggle-hide{
+  visibility: hidden;
+}
+
+@media (max-width : 1150px){
+
+  .navbar-menu{
+    visibility: hidden;
+  }
+
+  .search-bar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    right: 220px;
+    border-color: #87acba1f;
+    border: none;
+  }
+
+  .menu-toggle-hide{
+    visibility: visible;
+  }
+
+  .off-canvas-container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    transition: transform 0.3s ease;
+  }
+  
+  .off-canvas-menu {
+    position: absolute;
+    top: 50px;
+    left: 0; 
+    width: 250px;
+    height: auto;
+    background-color: #3e3d3d34;
+    /* background: transparent; */
+    color: #f0e9e9;
+    transition: left 0.3s ease;
+  }
+  
+  .off-canvas-menu a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #033639;
+    display: block;
+    transition: background 0.3s;
+  }
+  
+  .off-canvas-menu a:hover {
+    background-color: #575757;
+    color: white;
+  }
+  
+  /* Toggle button */
+  .menu-toggle {
+    position: absolute;
+    top: 15px;
+    right: 400px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1000; 
+  }
+  
+  /* When the menu is open */
+  .menu-open {
+    display: none; 
+  }
+}
+
+
+/* .menu-open .off-canvas-menu {
+  left: 0; 
+} */
+
   
