feat: resposible for some pages

--- a/src/User Pages/Home/Style.css
+++ b/src/User Pages/Home/Style.css
@@ -15,6 +15,14 @@ body {
 
 }
 
+@media (max-width: 993px){
+  .home-img{
+    max-width: 100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+  }
+}
 
 
 
