--- a/src/User Pages/component/Home/home.css
+++ b/src/User Pages/component/Home/home.css
@@ -2,25 +2,51 @@
 
 .category {
     font-family: Arial, sans-serif;
-    width: 100%;
-    display: flex;
-    justify-content: center;
   }
   
- 
+  .grid-style{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
   
   .card-container {
     border: none;
     background: rgba(255, 254, 254, 0.626);
-  
+    
   }
   
   .category-image {
-    width: 200px;
+    width: 100%;
     height: 200px;
     box-shadow: 0px 0px 5px black;
     transition: transform 0.5s;
   }
+  
+   @media (max-width: 992px){
+    .grid-style{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      flex-wrap: wrap;
+    justify-content: center;
+    }
+   } 
+   @media (max-width: 768px){
+    .grid-style{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+   } 
+  
+   @media (max-width: 576px){
+    .grid-style{
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+   } 
+
   .category-image:hover {
     transform: scale(105%);
     box-shadow: 10px 5px 5px rgb(163, 159, 159);
@@ -31,10 +57,10 @@
 
   /* Search */
 
-  .container {
+  /* .container {
     padding: 20px;
     margin: 0 auto;
-  }
+  } */
   
   .pt-5 {
     padding-top: 3rem;
