--- a/src/User Pages/component/NavBar-Footer/Style.css
+++ b/src/User Pages/component/NavBar-Footer/Style.css
@@ -244,21 +244,21 @@
 
 
 
-
-  /* Base styles */
-/* body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  overflow-x: hidden; 
-} */
-
-/* Container for the menu and content */
-
 .menu-toggle-hide{
   visibility: hidden;
 }
 
-@media (max-width : 1150px){
+@media (max-width : 1200px){
+
+  .navbar {
+    max-width: 1200px;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    transition: top 0.3s;
+    display: flex;
+    justify-content: center;
+  }
 
   .navbar-menu{
     visibility: hidden;
@@ -288,11 +288,10 @@
   .off-canvas-menu {
     position: absolute;
     top: 50px;
-    left: 0; 
+    left: 250px; 
     width: 250px;
     height: auto;
-    background-color: #3e3d3d34;
-    /* background: transparent; */
+    background-color: #3d3d3d34;
     color: #f0e9e9;
     transition: left 0.3s ease;
   }
@@ -300,8 +299,9 @@
   .off-canvas-menu a {
     padding: 10px 15px;
     text-decoration: none;
-    font-size: 18px;
-    color: #033639;
+    font-size: 20px;
+    font-weight: bolder;
+    color: #3d3d3df1;
     display: block;
     transition: background 0.3s;
   }
@@ -313,9 +313,9 @@
   
   /* Toggle button */
   .menu-toggle {
-    position: absolute;
-    top: 15px;
-    right: 400px;
+    position: fixed;
+    top: 13px;
+    right: 20px;
     font-size: 24px;
     cursor: pointer;
     z-index: 1000; 
@@ -327,7 +327,11 @@
   }
 }
 
-
+@media (max-width: 576px) {
+  .nav-icon{
+    display: none;
+  }
+}
 /* .menu-open .off-canvas-menu {
   left: 0; 
 } */
