--- a/src/User Pages/component/Products/products.css
+++ b/src/User Pages/component/Products/products.css
@@ -18,11 +18,30 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-top: 50px;    
-    border: none;
-
-    
+    border: none;   
  
 }
+
+@media (max-width: 1150px){
+    .furcategories{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 50px;    
+        border: none;   
+     
+    }
+}
+
+@media (max-width: 800px){
+    .furcategories{
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-top: 50px;    
+        border: none;   
+     
+    }
+}
+
 .card-item{
  display: flex;
  flex-direction: row;
@@ -94,45 +113,107 @@
 .product{
     margin-left: 85px;
     margin-top: 150px;
-    height: 500px;
-    width: 100%;
-    height: 500px;
     padding: 20px;
     background: transparent; 
     border: none;
 }
 
+.flex-style{
+    display: flex;
+}
 .cart-image{
     width: 500px;
     height: 400px;
-    border-radius: 50px 0 0 50px;
     object-fit: cover;
     border: none;
 }
 .cart-image img{
     width: 500px;
     height: 400px;
-    border-radius: 50px 0 0 50px;
-    
 }
 
 .cart-product{
-    width: 500px;
-    height: 400px;
-    border-radius: 0px 50px 50px 0px;
-    background: rgba(84, 98, 102, 0.265);
+    width: 100%;
     border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: 30px;
 }
+
+@media (max-width: 993px){
+    .flex-style{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .cart-image{
+        width: 500px;
+        height: 400px;
+        /* margin-left: 25px; */
+        object-fit: cover;
+        border: none;
+    }
+    .cart-image img{
+        width: 500px;
+        height: 400px;        
+    }
+    
+    .cart-product{
+        max-width: 100%;
+        margin-top: 20px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        border: none;
+    }
+    
+}
+
+
 
 .description{
     max-width: 500px;
     font-size: large;
-    margin-left: 50px;
+    /* margin-left: 50px; */
     
 }
 
 .addtocart{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 50px;
+    /* padding-top: 10px; */
+}
+
+@media (max-width: 576px){
+    .flex-style{
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center;
+        align-items: center; */
+    }
+    .cart-image{
+        width: 400px;
+        height: 300px;
+        object-fit: cover;
+        border: none;
+    }
+    .cart-image img{
+        width: 400px;
+        height: 300px;        
+    }
+    
+    .cart-product{
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        border: none;
+    }
+
+    .description{
+        max-width: 100%;
+        font-size: large;
+        /* margin-left: 50px; */
+        
+    }
 }
